# CFSession

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tester.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
CFSession/: __init__.py  __init__.pyi  __version__.py  cf.py  cfbrowser.py  cfbrowser.pyi  cfcookie.py  cfdefaults.py  cfdirmodel.py  cfdirmodel.pyi  cfexception.py  cfmodels.py  cfmodels.pyi  cftoolkit.py
stubs/CFSession/: cfbrowser.pyi  cfmodels.pyi
test/: bypass-IUAM.py  bypass-IUAM_test.py  changeDirectory_test.py  exception_test.py  exp_res.json  headless_test.py  raise_test.py  savecookie_test.py  setchromedriver_test.py  simulacrum_test.py
